# 21_school_Filler

./: CMakeLists.txt  Makefile  map_test  test
includes/: filler.h
sources/: ft_check_numbers_or_colon.c  ft_count_coords.c  ft_create_map.c  ft_error_msg.c  ft_free_filler.c  ft_make_map.c  ft_parse_map.c  ft_parse_piece.c  ft_parse_piece_size.c  ft_parse_plateau_size.c  ft_parse_player.c  main.c
